<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ReadBookFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:textColor= "#000000"

        android:background="@drawable/card_background">

        <!-- Naslov knjige -->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="109dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/naziv"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="4dp" />

        <EditText
            android:id="@+id/etBookTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/unesite_naziv_knjige"
            android:textColor="#000000"
            android:textSize="16sp"
            android:enabled="false"
            android:background="@drawable/edittext_background"
            android:layout_marginBottom="8dp" />

        <!-- Autor -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/autor"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_marginBottom="4dp" />

        <EditText
            android:id="@+id/etBookAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/unesite_ime_autora"
            android:textColor="#000000"
            android:textSize="16sp"
            android:enabled="false"
            android:background="@drawable/edittext_background"
            android:layout_marginBottom="8dp" />

        <!-- Žanr -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zanr"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_marginBottom="4dp" />

        <EditText
            android:id="@+id/etBookGenre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/unesite_zanr_knjige"
            android:textColor="#000000"
            android:enabled="false"
            android:textSize="16sp"
            android:background="@drawable/edittext_background"
            android:layout_marginBottom="8dp" />

        <!-- Nakladnik -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nakladnik"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_marginBottom="4dp" />

        <EditText
            android:id="@+id/etBookPublisher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/unesite_ime_nakladnika"
            android:textColor="#000000"
            android:enabled="false"
            android:textSize="16sp"
            android:background="@drawable/edittext_background"
            android:layout_marginBottom="8dp" />

        <!-- Lokacija -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lokacija"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_marginBottom="4dp" />

        <EditText
            android:id="@+id/etBookLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/unesite_lokaciju"
            android:textColor="#000000"
            android:enabled="false"
            android:textSize="16sp"
            android:background="@drawable/edittext_background"
            android:layout_marginBottom="8dp" />

        <!-- Dostupno -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dostupno"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_marginBottom="4dp" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:text="@string/ne_da"
            android:enabled="false"
            android:textColor="#000000"
            android:thumbTint="@color/darkBlue"
            android:trackTint="@color/lightBlue" />

        <!-- Godina izdanja -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/godina_izdanja"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_marginBottom="4dp" />

        <EditText
            android:id="@+id/etBookYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/unesite_godinu_izdanja"
            android:textColor="#000000"
            android:enabled="false"
            android:textSize="16sp"
            android:inputType="number"
            android:background="@drawable/edittext_background"
            android:layout_marginBottom="8dp" />

        <!-- Jezik izdanja -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jezik_izdanja"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_marginBottom="4dp" />

        <EditText
            android:id="@+id/etBookLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/unesite_jezik_izdanja"
            android:textColor="#000000"
            android:enabled="false"
            android:textSize="16sp"
            android:background="@drawable/edittext_background"
            android:layout_marginBottom="8dp" />

        <!-- Broj stranica -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/broj_stranica"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_marginBottom="4dp" />

        <EditText
            android:id="@+id/etBookPages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/unesite_broj_stranica"
            android:textColor="#000000"
            android:enabled="false"
            android:textSize="16sp"
            android:inputType="number"
            android:background="@drawable/edittext_background"
            android:layout_marginBottom="8dp" />

        <!-- Uvez -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uvez"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_marginBottom="4dp" />

        <EditText
            android:id="@+id/etBookBinding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/unesite_vrstu_uveza"
            android:textColor="#000000"
            android:enabled="false"
            android:textSize="16sp"
            android:background="@drawable/edittext_background"
            android:layout_marginBottom="8dp" />


        <!-- Opis -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opis"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_marginBottom="4dp" />
        <EditText
            android:id="@+id/etBookDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/unesite_opis_knjige"
            android:enabled="false"
            android:textColor= "#000000"
            android:textSize="16sp"
            android:background="@drawable/edittext_background"
            android:layout_marginBottom="16dp"
            android:minHeight="100dp"
            android:gravity="top"
            android:inputType="textMultiLine" />

        <!-- Kontaktiraj -->
        <Button
            android:id="@+id/btnKontaktBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/blue"
            android:text="@string/kontaktiraj"
            android:textColor="@color/white"
            android:textSize="16sp" />


        <!-- Gumb za ažuriranje -->
        <Button
            android:id="@+id/btnUpdateBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/blue"
            android:text="@string/azuriraj"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="gone" />

        <!-- Gumb za brisanje -->
        <Button
            android:id="@+id/btnDeleteBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/red"
            android:text="@string/obrisi"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="gone" />


    </LinearLayout>
    </ScrollView>

</FrameLayout>